--- a/my-mongo/src/main/resources/application.properties
+++ b/my-mongo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=employee by ems
 server.port=8080
-
+#test
 #spring.datasource.url=jdbc:mysql://root:IASkAFPDOgsRWfUmYRXmylTlXFURTuTU@gondola.proxy.rlwy.net:51947/railway
 #spring.datasource.username=root
 #spring.datasource.password=IASkAFPDOgsRWfUmYRXmylTlXFURTuTU
