--- a/my-mongo/src/main/resources/application.properties
+++ b/my-mongo/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=employee by ems
 server.port=8080
 #test
-#spring.datasource.url=jdbc:mysql://root:IASkAFPDOgsRWfUmYRXmylTlXFURTuTU@gondola.proxy.rlwy.net:51947/railway
-#spring.datasource.username=root
-#spring.datasource.password=IASkAFPDOgsRWfUmYRXmylTlXFURTuTU
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://root:iMCGruPKOSlTqoEYoJEEbEYdZSCxFHTc@metro.proxy.rlwy.net:56165/railway
+spring.datasource.username=root
+spring.datasource.password=iMCGruPKOSlTqoEYoJEEbEYdZSCxFHTc
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #local database
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ems_test
-spring.datasource.username=root
-spring.datasource.password=root123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/ems_test
+#spring.datasource.username=root
+#spring.datasource.password=root123
 
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
